welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: not found: value biscuit
  if (estSurBiscuit() == true){biscuit = biscuit + 1}
                               ^