welcome.lessons.welcome.variables.RunHalf.scala.code
var biscuits: Int = 0
var caseOrange: Int = 0
while (2 * biscuits != caseOrange + 1) {
  avance()
  if (estSurBiscuit() == true){biscuit = biscuit + 1}
  if (estSurOrange() == true){caseOrange = caseOrange + 1}
}